@startuml QuizResultClassDiagram

hide circle
skinparam classAttributeIconSize 0
skinparam {
    classFontSize 13
    arrowFontSize 12
    classAttributeFontSize 12
}

package "Command Layer" {
    abstract "{abstract} \n Command" {
        +{abstract} executeCommand()
    }

    class "CommandViewQuizResult" {
        +executeCommand()
    }
}

package "Deck Layer" {
    class "Deck" {
        -incorrectIndexes: ArrayList<Integer>
        -incorrectFlashcards: ArrayList<Flashcard>
        -incorrectAnswers: ArrayList<String>
        +showQuizResult(): String
        +showMistakes(): void
        -validateArrays(): boolean
        -calculateStats(): String
    }
}

package "Data Model" {
    class "Flashcard" {
        -question: String
        -answer: String
        -codeSnippet: String
        +getQuestion(): String
        +getAnswer(): String
    }
}

package "UI Layer" {
    class "Ui" {
        +showToUser(message: String): void
        +showError(error: String): void
    }
}

' Relationships
"{abstract} \n Command" <|-- "CommandViewQuizResult"
"CommandViewQuizResult" -> "Deck" : uses
"CommandViewQuizResult" -> "Ui" : uses

"Deck" *-- "Flashcard" : contains
"Deck" o-- "Integer" : incorrectIndexes
"Deck" o-- "String" : incorrectAnswers


@enduml